# portafolio

./: .gitignore  README.md  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yml
src/: app.js  index.html
src/main/: main.mjs
src/main/css/: app.css
src/pages/aboutme/: aboutme_info.mjs  aboutme_message.mjs  main.mjs
src/pages/header/: main.mjs  usuario.mjs  usuario_info.mjs
src/pages/projects/: main.mjs  projects.mjs
src/pages/technologies/: main.mjs  technologies_info.mjs  technologies_message.mjs
src/utils/: projects.mjs  technologies.mjs
